--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,12 @@
     "@nestjs/core": "^10.4.15",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "compromise": "^14.14.3",
     "mongoose": "^8.9.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "wink-eng-lite-web-model": "^1.8.1",
+    "wink-nlp": "^2.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
